package edu.fiuba.algo3.modelo;

public interface Defensa {

    public int getCosto();
}